--- a/src/components/dayView/dayView.scss
+++ b/src/components/dayView/dayView.scss
@@ -7,8 +7,7 @@
   position: relative;
   margin: auto;
 
-  max-width: 980px;
-  background-color:lightgrey;
+  //max-width: 1020px;
 }
 
 .dayView_dayTitle {
@@ -25,7 +24,14 @@
 
 .dayView_container_section {
   float: left;
-  width: 50%;
   border: 1px solid yellow;
   box-sizing: border-box;
+
+  &.left {
+    width: 66%;
+  }
+
+  &.right {
+    width: 33%;
+  }
 }
