--- a/src/components/dayView/diary/diary.scss
+++ b/src/components/dayView/diary/diary.scss
@@ -1,7 +1,9 @@
 .diary{
   position: relative;
-  background-color: red;
-  height: 300px;
+  //height: 300px;
 
+  padding: 10px;
+
+  border: 1px solid black;
   box-sizing: border-box;
 }
