--- a/src/components/utils/wordList/wordList.scss
+++ b/src/components/utils/wordList/wordList.scss
@@ -1,6 +1,6 @@
 .wordList {
   position: relative;
-  width: 130px;
+  width: 100%;
   border: 1px solid black;
   box-sizing: border-box;
   display: inline-block;
